# NimTui

./: .gitignore  .gitmodules  .vim.lua  CMakeLists.txt
demo/: CMakeLists.txt  Demo.cpp  Demo.h  DemoMenu.cpp  DemoMenu.h  DemoPage.cpp  DemoPage.h  DemoStyle.h  main.cpp
demo/ImageBrowserDemo/: ImageBrowser.cpp  ImageBrowser.h  ImageView.cpp  ImageView.h
demo/Primitives/: RectDemo.cpp  RectDemo.h  TextDemo.cpp  TextDemo.h
lib/: CMakeLists.txt
src/: CMakeLists.txt  Console.cpp  Console.h  ConsoleWindow.cpp  ConsoleWindow.h  FileTree.cpp  FileTree.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Style.h  main.cpp
src/Common/: Color.cpp  Color.h  EnumClassBinaryOperators.h  Grapheme.h  Unicode.cpp  Unicode.h  Utf8Char.h  Vec.h
src/Console/: Console.cpp  Console.h  ConsoleSequences.h  ConsoleString.cpp  ConsoleString.h  ConsoleWindow.cpp  ConsoleWindow.h  KeyCode.h  RenderBuffer.cpp  RenderBuffer.h
src/Primitives/: Bitmap.cpp  Bitmap.h  Drawable.cpp  Drawable.h  Line.cpp  Line.h  Rect.cpp  Rect.h  Text.cpp  Text.h
src/Widgets/: FileBrowser.cpp  FileBrowser.h  Grid.cpp  Grid.h  ListView.cpp  ListView.h  SelectionMenu.cpp  SelectionMenu.h  TextBox.cpp  TextBox.h  Widget.cpp  Widget.h
test/: CMakeLists.txt  TestUtils.h
test/Common/: Color.test.cpp  Graphem.test.cpp  Unicode.test.cpp  Utf8Char.test.cpp  Vec.test.cpp
test/Console/: ConsoleSequences.test.cpp  ConsoleString.test.cpp  RenderBuffer.test.cpp
test/Primitives/: Text.test.cpp
test/Widges/: ListView.test.cpp  Widget.test.cpp
test/lib/: wtswidth.test.cpp
